--- a/style.css
+++ b/style.css
@@ -1,11 +1,18 @@
+
+body{
+      background-color: black;
+}
+
+
+
 .container{
-      width: 500px;
-      height: 500px;
+      width: 550px;
+      height: 400px;
       border: 2px solid black;
-      border-radius: 5px;
-      background-color: aqua;
+      border-radius: 10px;
+      background-color:coral;
       position: relative;
-      left: 200px;
+      left: 400px;
       top: 100px;
 }
 
@@ -16,24 +23,43 @@ button{
       position: relative;
       left: 200px;
       font-size:20px ;
-      top: 400px;
+      top: 300px;
+      border-radius: 10px;
+      padding: 5px;
+      font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+      color: hotpink;
+      background-color:darkturquoise;
+      box-shadow:  0 0 3px #FF0000, 0 0 5px #0000FF;
 }
 
 .one{
 
       text-align: center;
       position: relative;
-      top:80px
+      top:50px;
+      color:yellow;
 }
 
 .two{
       text-align: center;
       position: relative;
-      top: 100px;
+      top: 70px;
+      color: yellow;
 }
 
 h3{
       position: relative;
       top: 100px;
       text-align: center;
+      font-size: 30px;
+}
+
+
+span{
+      font-size: 70px;
+      position: relative;
+      text-align: center;
+      left: 100px;
+      color:white;
+      font-weight: bold;
 }
