--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ button{
       border-radius: 10px;
       padding: 5px;
       font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-      color: hotpink;
+      color: black;
       background-color:darkturquoise;
       box-shadow: 5px 5px blue, 10px 10px red, 15px 15px green;
 
